Fix layout issue on welcome page

--- a/scss/welcome-page.scss
+++ b/scss/welcome-page.scss
@@ -68,7 +68,7 @@
     margin: 50px auto 0 auto;
     height: 262px;
     min-width: 375px;
-    max-width: 460px;
+    max-width: 500px;
     position: relative;
     top: 30%;
     transform: translateY(-30%);
